--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,6 @@
   
   <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/cover/">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
-  
   <link href="./assets/dist/css/bootstrap.min.css" rel="stylesheet">
   
   <style>
@@ -155,7 +154,7 @@
       <h3 class="float-md-start mb-0">Tauchbolde</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Start</a>
-        <a class="nav-link fw-bold py-1 px-0" href="#">Über uns</a>
+        <a class="nav-link fw-bold py-1 px-0" href="about.html">Über uns</a>
         <a class="nav-link fw-bold py-1 px-0" href="#">Kontakt</a>
       </nav>
     </div>
