--- a/src/about.html
+++ b/src/about.html
@@ -26,7 +26,7 @@
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link fw-bold py-1 px-0" href="index.html">Start</a>
                     <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="about.html">Über uns</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="#">Kontakt</a>
+                    <a class="nav-link fw-bold py-1 px-0" href="contact.html">Kontakt</a>
                 </nav>
             </div>
         </header>
