--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="#">Start</a>
           <a class="nav-link fw-bold py-1 px-0" href="about.html">Über uns</a>
-          <a class="nav-link fw-bold py-1 px-0" href="#">Kontakt</a>
+          <a class="nav-link fw-bold py-1 px-0" href="contact.html">Kontakt</a>
         </nav>
       </div>
     </header>
