--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
   <title>Regna Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <meta content="Die Tauchbolde sind ein kleiner Haufen angefressener Taucher die auch noch bei Wind und Wetter in die einheimischen Seen und Flüsse steigen. Wir gehören keinem Tauchshop und keiner Tauchschule an und verstehen uns auch nicht als Tauchclub. Am besten würde es das Wort Interessensgemeinschaft treffen." name="description">
+  <meta content="auchen,zuürichsee,tauchbolde,tauchgruppe,taucher,zürich,schweiz,kaltwasser,trimix,nitrox,advanced,gruppe,scuba,dive,diving,tec,tecdiving,technical,zuerich,lake,river,ice,eis,doubles,doppeltank,rebreather,sidemount" name="keywords">
   
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
