--- a/src/website/index.html
+++ b/src/website/index.html
@@ -357,7 +357,7 @@
                       <div class="member" data-aos="fade-up" data-aos-delay="200">
                         <div class="pic"><img src="assets/img/team/dominik.jpeg" alt=""></div>
                         <h4>Dominik</h4>
-                        <span>Tauchlehrere, Trimix, Rebreather</span>
+                        <span>Tauchlehrer, Trimix, Rebreather</span>
                         <span>>1500 Tauchgänge, >1100 Stunden unter Wasser, längster TG 175 Min.</span>
                         <div class="social">
                           <!-- <a href=""><i class="bi bi-twitter"></i></a>
