Update "Join us" description

--- a/src/website/index.html
+++ b/src/website/index.html
@@ -159,7 +159,20 @@
                   <div class="row" data-aos="zoom-in">
                     <div class="col-lg-9 text-center text-lg-start">
                       <h3 class="cta-title">Du willst bei uns mitmachen? Kein Problem!</h3>
-                      <p class="cta-text">Wir sind keine Freunde von grossen hierachischen Strukturen und langwierigen Prozeduren. Es muss einfach stimmen und das finden wir beim gemeinsamen Tauchen raus.</p>
+                      <p class="cta-text lead">Wir sind keine Freunde von grossen hierachischen Strukturen und langwierigen Prozeduren. Es muss einfach stimmen und das finden wir beim gemeinsamen Tauchen raus.</p>
+                      <p class="cta-text small">
+                        Bei den Tauchbolden sind wir der Meinung, dass neben Erfahrung und Ausbildung auch die
+                        "Chemie" zwischen den Mitgliedern stimmen sollte, um zusammen anspruchsvollere Tauchgänge
+                        sicher durch zu führen. Darum handhaben wir es so, dass Interessenten auf ein paar Tauchgänge mit uns mitkommen.
+                        Dabei kann man sich gegenseitig kennen lernen und die Details klären/austauschen. Anschliessend kann der 
+                        Interessent entscheiden, ob er/sie nach wie vor bei uns mitmachen will. Auch die Tauchbolde führen intern 
+                        eine Abstimmung durch. Passt es von beiden Seiten her nach wie vor, so steht der Aufnahme nichts mehr im Weg.
+                      </p>
+                      <p class="cta-text small">
+                        Bist Du ein/e erfahrene/r Kaltwassertaucher und hast mindestens den PADi Rescue oder äquivalent 
+                        sowie ein paar hundert Tauchgänge und willst regelmässig mit uns in die heimischen Gewässer 
+                        abtauchen, dann melde Dich bei uns.
+                      </p>
                     </div>
                     <div class="col-lg-3 cta-btn-container text-center">
                       <a class="cta-btn align-middle" href="#contact">Melde Dich bei uns!</a>
