--- a/src/website/index.html
+++ b/src/website/index.html
@@ -475,7 +475,7 @@
                     
                     <div class="container">
                       <div class="copyright">
-                        &copy; Copyright <strong>Marc Dürst</strong>. All Rights Reserved
+                        &copy; Copyright <strong>Marc Dürst</strong>. All Rights Reserved. Test
                       </div>
                       <div class="credits">
                         <!--
