Revert "Test website update"
This reverts commit c77df481e60b3f2c945e07f168240db43310fafa.

--- a/src/website/index.html
+++ b/src/website/index.html
@@ -475,7 +475,7 @@
                     
                     <div class="container">
                       <div class="copyright">
-                        &copy; Copyright <strong>Marc Dürst</strong>. All Rights Reserved. Test
+                        &copy; Copyright <strong>Marc Dürst</strong>. All Rights Reserved
                       </div>
                       <div class="credits">
                         <!--
