--- a/src/website/index.html
+++ b/src/website/index.html
@@ -383,7 +383,7 @@
                         
                         <div class="col-lg-3 col-md-6">
                           <div class="member" data-aos="fade-up" data-aos-delay="300">
-                            <div class="pic"><img src="assets/img/team/jelena.png" alt=""></div>
+                            <div class="pic"><img src="assets/img/team/jelena_2.jpeg" alt=""></div>
                             <h4>Jelena</h4>
                             <span>Advanced Nitrox</span>
                             <span>>700 Tauchgänge, >700 Stunden unter Wasser, längster TG >90 Min.</span>
