Update education of Jelena

--- a/src/website/index.html
+++ b/src/website/index.html
@@ -385,7 +385,7 @@
                           <div class="member" data-aos="fade-up" data-aos-delay="300">
                             <div class="pic"><img src="assets/img/team/jelena_2.jpeg" alt=""></div>
                             <h4>Jelena</h4>
-                            <span>Advanced Nitrox</span>
+                            <span>Trimix</span>
                             <span>>700 Tauchgänge, >700 Stunden unter Wasser, längster TG >90 Min.</span>
                             <div class="social">
                               <!-- <a href=""><i class="bi bi-twitter"></i></a>
